# rust_automation

./: Cargo.toml
src/: main.rs
