[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.23"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = {version = "0.11.18", features = ["blocking"]}
scraper = "0.16"





# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
















